# QingCode

./: .eslintignore  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.en.md  CHANGELOG.md  DESIGN.md  HELP.md  LICENSE  PLAN.md  README.en.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  start.bat  tsconfig.json  vite.config.ts  vitest.config.ts  帮助文档.md
.cursor/rules/: database-persistence.mdc
.github/workflows/: release.yml  sync-gitee-release.yml  update-release-notes.yml  verify.yml
.qingcode/: run.json
docs/: git-basic-commit-workflow.md  minimap.md  terminal-resize.md  发布验收清单.md
docs/release-notes/: v0.1.4.md  v0.1.5.md  v0.1.6.md
scripts/: bump-version.ps1  canonical-release-assets.ps1  gitee-release.ps1  package-common.ps1  package-exe.ps1  package-installer.ps1  package-macos.sh  package-windows.ps1  publish-gitee-release.ps1  register-open-with.ps1  release-tag.ps1  setup-dual-remotes.ps1  smoke-start.ps1  sync-qingcode-cli-skill.mjs  tauri-dev.ps1
src/: App.css  App.tsx  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  secondary.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_memory.rs  app_paths.rs  commands.rs  content_search.rs  exclude.rs  file_associations.rs  file_encoding.rs  file_watcher.rs  fonts.rs  format.rs  git.rs  git_status.rs  lib.rs  main.rs  path_guard.rs  symbol_search.rs  terminal.rs  update.rs  user_locales.rs
src-tauri/src/cli/: args.rs  db.rs  mod.rs  online.rs  output.rs  run_config.rs
src-tauri/src/commands/: cmd_fs.rs  cmd_scan.rs  cmd_search.rs  cmd_stat.rs
src-tauri/src/ipc/: mod.rs
src-tauri/windows/: hooks.nsh
src/components/: ActivityBar.tsx  AppIcon.tsx  ChoiceDialog.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ContextMenu.tsx  DefinitionPicker.tsx  DiffEditor.tsx  Editor.tsx  EditorBreadcrumbs.tsx  EditorFindReplacePanel.tsx  EditorMinimap.tsx  EditorOpenError.tsx  EditorTabs.tsx  EmptyEditor.tsx  EmptyState.tsx  ExplorerConflictDialog.tsx  ExplorerTreeRow.tsx  FileCompareDialog.tsx  FileMenu.tsx  FontFamilySelect.tsx  FontSettings.tsx  HelpDialog.tsx  InlineCreateRow.tsx  Kbd.tsx  LanguageSettings.tsx  LargeFileViewer.tsx  MarkdownPreview.tsx  MarkdownRichText.tsx  ModalOverlay.component.test.tsx  ModalOverlay.tsx  PanelResizer.tsx  ProjectAddDialog.component.test.tsx  ProjectAddDialog.tsx  ProjectCustomSettings.tsx  ProjectManager.component.test.tsx  ProjectManager.tsx  ProjectPicker.tsx  PromptDialog.tsx  PropertiesDialog.tsx  (+43 more)
src/hooks/: useAppKeyboardShortcuts.ts  useAppUpdateCheck.ts  useAutoSave.ts  useDraftRecovery.ts  useFileWatcher.ts  useGitStatus.ts  useTerminalPanel.ts
src/lib/: activityBarLayout.test.ts  activityBarLayout.ts  appClose.ts  appIconSvg.ts  appMemory.test.ts  appMemory.ts  appUpdate.ts  appWindow.ts  autoSave.ts  autoSaveSettings.ts  bracketDecorations.test.ts  bracketDecorations.ts  browserReloadGuard.ts  cliBridge.test.ts  cliBridge.ts  commands.test.ts  commands.ts  contextMenuGuard.test.ts  contextMenuGuard.ts  copyFileActions.test.ts  copyFileActions.ts  devBuild.test.ts  (+161 more)
(+120 files in other folders)
