[package]
name = "qingcode"
version = "0.1.3"
description = "QingCode — a lightweight multi-project code editor"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qingcode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# `tauri build` enables `tauri/custom-protocol` for release so the webview loads
# the embedded `frontendDist` instead of `devUrl`. package-exe.ps1 calls
# `cargo build --release` directly for incremental speed, so we expose the same
# feature here and enable it in the release build to avoid the webview falling
# back to http://127.0.0.1:5173 (ERR_CONNECTION_REFUSED) in the shipped exe.
[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
sysinfo = "0.33"
portable-pty = "0.8"
ignore = "0.4.29"
grep-searcher = "0.1.17"
grep-regex = "0.1.14"
grep-matcher = "0.1.9"
winreg = "0.55"
# 注意：tokio / futures / chrono 不作为直接依赖。
# 源码未直接使用它们；由 tauri / portable-pty 等按需拉取所需特性即可，
# 避免 tokio "full" 把 net/signal/process/fs 等全部模块强行编入。

# 面向构建速度优化的 release profile：
# - opt-level 3 → 2：跳过最昂贵的 LLVM 向量化/内联 pass，编译提速最明显，运行时几乎无感
# - codegen-units 16：提高并行度，多用 CPU 核心一起编
# - lto = false：关闭链接时优化（默认即 false，此处显式声明，避免被其他配置开启）
# - strip + panic=abort：减小单文件 exe 体积、链接更快
# 若追求极致构建速度可把 opt-level 改为 1；若更在意运行时性能可改回 3 并设 lto = "thin"
[profile.release]
opt-level = 2
lto = false
codegen-units = 16
strip = "symbols"
panic = "abort"
debug = false
# 开启 release 增量编译：仅改少量 Rust 文件时 package:exe 明显更快（体积略增，运行时几乎无感）
incremental = true
